--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
 	
 	<div id="weclomenote">
-		<div id="welcome">
+		<div id="welcome" class="shadow">
 			&nbsp; Welcome,
 			<ul>
 				<li>Rails is a framework which can useful to develop web applications</li>
