--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,16 +11,40 @@
  *= require_self
  *= require_tree .
  */
-
+@font-face {
+    font-family: 'GothicUltraOTRegular';
+    src: url('gothic_ultra_ot-webfont.eot');
+    src: url('gothic_ultra_ot-webfont.eot?#iefix') format('embedded-opentype'),
+         url('gothic_ultra_ot-webfont.woff') format('woff'),
+         url('gothic_ultra_ot-webfont.ttf') format('truetype'),
+         url('gothic_ultra_ot-webfont.svg#GothicUltraOTRegular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
 #nav
 {
   background: #ececec;
   border-bottom: solid maroon 1px;
   padding: 0.5em;
-  font-weight: bold;
+  
+  font-size:20px;
+  font-family:"GothicUltraOTRegular";
 }
 #nav a
 {
   color: Maroon;
   text-decoration:none;
+  list-style: url(image-url.gif);
+}
+#nav a:hover
+{
+	font-weight: bold;
+	text-decoration:underline;
+	color:black;
+	padding:1em;
+}
+.one-edge-shadow {
+	-webkit-box-shadow: 0 8px 6px -6px black;
+	   -moz-box-shadow: 0 8px 6px -6px black;
+	        box-shadow: 0 8px 6px -6px black;
 }
